"fixed text gap on ipad air version"

--- a/styles.css
+++ b/styles.css
@@ -1695,6 +1695,10 @@ body {
     font-size: 1.7rem;
   }
 
+  .alm-doctors {
+    gap: 10px;
+   }
+
 }
 
 @media (max-width: 768px) {
